--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,4 +10,5 @@
 
 main {
   transition: color 0.5s ease-out, background-color 0.5s ease-out;
+  padding: env(safe-area-inset);
 }
